crates/aven-check/tests/fixtures/check/valid/or-pattern-tags.av
Color = @{@Red, @Green, @Blue}

color : Color = @Red
result = color ?>
  @Red | @Green => "warm"
  @Blue => "cool"
