crates/aven-check/tests/fixtures/check/invalid/or-pattern-binding-mismatch.av
source : @{@Ok(Int), @Err(Int)} = @Ok(1)
result : Int = source ?>
  @Ok(ok) | @Err(err) => ok
